--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="js/app.js" defer></script>
+	<script src="src/app/app.js" defer></script>
 </head>
 <body>
 	<div id="app"></div>
